# tg-personal-stremio

./: Dockerfile  README.md  pyproject.toml  sample_config.env  start.sh
Backend/: __init__.py  __main__.py  config.py
Backend/fastapi/: app.py
Backend/fastapi/routes/: admin_routes.py  stream_routes.py  stremio_routes.py
Backend/fastapi/templates/admin/: base.html  home.html  media.html
Backend/helper/: database.py  encrypt.py  exceptions.py  modal.py
Backend/plugins/: file_receiver.py
