[project]
name = "tg-personal-stremio"
version = "1.0.0"
description = "Personal Video Stremio Addon powered by Telegram"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.4.0",
    "pymongo>=4.7.0",
    "pyrofork>=2.3.0",
    "TgCrypto>=1.2.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
